update the code

--- a/sample.html
+++ b/sample.html
@@ -26,5 +26,22 @@
         }
         footer {
             margin-top: 15px;
-            font-siz
+            font-size: 12px;
+            color: #888;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="card">
+        <h1>Welcome to GitHub 🚀</h1>
+        <p>This is my first HTML file pushed using Git.</p>
+        <p>Learning Git, GitHub & AWS DevOps.</p>
+        <footer>
+            © 2025 | Created by Sasi
+        </footer>
+    </div>
+
+</body>
+</html>
 
